crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__abandoned_future_records_abandoned_error_type.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: sorted_attrs(&attrs)
---
[
    (
        "error.type",
        "abandoned",
    ),
    (
        "http.request.method",
        "GET",
    ),
    (
        "server.address",
        "example.com",
    ),
    (
        "server.port",
        "443",
    ),
    (
        "url.scheme",
        "https",
    ),
]
