crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__completed_future_does_not_record_abandoned.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: sorted_attrs(&attrs)
---
[
    (
        "http.request.method",
        "GET",
    ),
    (
        "http.response.status_code",
        "200",
    ),
    (
        "network.protocol.name",
        "http",
    ),
    (
        "network.protocol.version",
        "1.1",
    ),
    (
        "server.address",
        "example.com",
    ),
    (
        "server.port",
        "443",
    ),
    (
        "url.scheme",
        "https",
    ),
]
