crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__fill_error_attributes.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: sorted_attrs(attributes.values())
---
[
    (
        "error.type",
        "io.connection_refused",
    ),
]
