crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__fill_request_attributes.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: sorted_attrs(attributes.values())
---
[
    (
        "extra",
        "extra_val",
    ),
    (
        "http.request.method",
        "GET",
    ),
    (
        "server.address",
        "example.com",
    ),
    (
        "server.port",
        "443",
    ),
    (
        "url.scheme",
        "https",
    ),
]
