crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__fill_request_attributes_with_template.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: sorted_attrs(attributes.values())
---
[
    (
        "http.request.method",
        "GET",
    ),
    (
        "url.scheme",
        "_OTHER",
    ),
    (
        "url.template",
        "/api/v1/crates/{crate_name}",
    ),
]
