crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__fill_request_attributes_with_template_label.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: sorted_attrs(attributes.values())
---
[
    (
        "http.request.method",
        "GET",
    ),
    (
        "url.scheme",
        "_OTHER",
    ),
    (
        "url.template",
        "crates_api",
    ),
]
