crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__fill_request_attributes_with_url_template_label_extension.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: sorted_attrs(attributes.values())
---
[
    (
        "http.request.method",
        "GET",
    ),
    (
        "server.address",
        "example.com",
    ),
    (
        "server.port",
        "443",
    ),
    (
        "url.scheme",
        "https",
    ),
    (
        "url.template",
        "/api/users/{id}",
    ),
]
