crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__request_enricher.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: request_enricher
---
RequestEnricher(..)
