crates/fetch/src/handlers/snapshots/fetch__handlers__metrics__tests__response_enricher.snap
---
source: crates/fetch/src/handlers/metrics.rs
expression: response_enricher
---
ResponseEnricher(..)
